Modification du titre HTML et du favicon

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -32,7 +32,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <!-- Instrument Sans -->
     <link href="https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400..700;1,400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>Meteor Song</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
